Fix splash overlap with leaderboard

--- a/src/main.css
+++ b/src/main.css
@@ -317,7 +317,7 @@ a:hover {
 }
 @media (max-width: 1080px) {
     .splash--ads .main-section {
-        margin-left: 150px;
+        margin-left: 180px;
         margin-right: 340px;
     }
 
